--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <script src="./audiojs/audio.min.js"></script>
       <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
       <script src="main.js"></script>
+      <script src="music.js"></script>
 
     <link rel="stylesheet" href="includes/index.css" media="screen">
   </head>
@@ -18,15 +19,15 @@
 
 
     <div>
-    <div style="text-align: center; font-size: 35px; margin-top: 15%;" id="name_div">
-        <a id="name" style="text-align: center; font-size: 35px; margin-top: 15%; cursor: pointer; border-bottom: none;" ></a>
+    <div id="name_div">
+        <a id="name"></a>
     </div>
     <div style="position:fixed; margin-left: 10000px;" id="audios">
         <audio src="http://dl.zaycev.net/86004/421474/rise_against_-_hero_of_war_(zaycev.net).mp3" preload="auto"></audio>
     </div>
     <div style="width: 200px; margin: 0 auto;"><h3 id="play" style="text-align: center; cursor: pointer;" next="false">Play</h3></div>
     </div>
-    <div style="margin-top: 15%">Danik Tsyrkunov © 2014</div>
+    <div style="margin-top: 17%">Danik Tsyrkunov © 2014</div>
   </body>
 </html>
 
