--- a/index.html
+++ b/index.html
@@ -3,33 +3,66 @@
   <head>
     <meta charset="utf-8">
     <title>Music</title>
-    <script src="./audiojs/audio.min.js"></script>
-      <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-      <script src="main.js"></script>
-      <script src="music.js"></script>
 
+    <link href='http://fonts.googleapis.com/css?family=Lato:400,700,300italic,400italic' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="includes/index.css" media="screen">
   </head>
   <body>
 
-    <div id="album"></div>
-    <div id="list"><h2>List</h2></div>
-    <div id="list_block" open="false" style="position: absolute; margin-top: -10%; margin-left: 68%; width: 25%; background: #0B0B0A">
+  <canvas class="snow" width="100%" height="100%"></canvas>
+
+    <div id="list"style="margin-top: 200px"><h2>List</h2></div>
+    <div id="list_block" open="false" style="position: absolute; margin-top: 200px; margin-left: 68%; width: 25%; background: #0B0B0A">
+    </div>
+
+    <div class="outer" style="display: none">
+        <div id="panel">
+            <img id="cover">&nbsp;
+            <div class="column">
+                <div id="track"></div>
+                <div id="line-track"></div>
+                <div id="album"></div>
+                <div id="artist"></div>
+                <div id="line-artist"></div>
+            </div>
+        </div>
     </div>
 
 
-    <div>
-    <div id="name_div">
-        <a id="name"></a>
+    <div id="mini-panel" >
+        <div id="album-mini"></div>
+
+        <div class="info_panel">
+            <div class="name_div" id="name_div">
+                <a class="name" id="name"></a>
+            </div>
+            <div class="name_div_notfloat" >
+                <a class="name_notfloat" id="name_album"></a>
+            </div>
+            <div class="name_div_notfloat" >
+                <a class="name_notfloat" id="name_group"></a>
+            </div>
+        </div>
     </div>
-    <div style="position:fixed; margin-left: 10000px;" id="audios">
-        <audio src="http://dl.zaycev.net/86004/421474/rise_against_-_hero_of_war_(zaycev.net).mp3" preload="auto"></audio>
+
+    <div id="line-panel" style="display: none">
+        <div style="float: left;" id="audios" class="audios">
+            <audio src="http://dl.zaycev.net/86004/421474/rise_against_-_hero_of_war_(zaycev.net).mp3" preload="auto"></audio>
+        </div>
     </div>
-    <div style="width: 200px; margin: 0 auto;"><h3 id="play" style="text-align: center; cursor: pointer;" next="false">Play</h3></div>
-    </div>
-    <div style="margin-top: 17%">Danik Tsyrkunov © 2014</div>
+
+    <div style="width: 200px; margin: 0 auto;"><h3 id="play" style="text-align: center; cursor: pointer; display: none; opacity: 0;" next="false">Play</h3></div>
+    <!--<div style="margin-top: 17%">Danik Tsyrkunov & Alex Saskevich © 2014</div>-->
   </body>
 </html>
+<script src="./audiojs/audio.min.js"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+        <script src="jquery.min.js"></script>
+        <script src="jquery.transit.min.js"></script>
+        <script src="jquery.let_it_snow.js"></script>
+        <script src="app.js"></script>
+<script src="main.js"></script>
+<script src="music.js"></script>
 
 
 
@@ -44,4 +77,17 @@
     ga('create', 'UA-55190583-2', 'auto');
     ga('send', 'pageview');
 
+</script>
+
+<script>
+    $("canvas.snow").let_it_snow({
+        speed: 0,
+        interaction: true,
+        size: 2,
+        count: 200,
+        opacity: 0,
+        color: "#ffffff",
+        windPower: 0,
+        image: false
+    });
 </script>
