--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <canvas class="snow" width="100%" height="100%"></canvas>
 
     <div id="list"><h2>List</h2></div>
-    <div id="list_block" open="false" style="position: absolute; margin-top: 2%; margin-left: 74%; width: 25%; background: #0B0B0A">
+    <div id="list_block" open="false" style=" z-index: 20; position: absolute; margin-top: 2%; margin-left: 74%; width: 25%; background: #0B0B0A">
     </div>
 
     <div class="outer" style="display: none">
