--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 </head>
 <body>
 
-<canvas class="snow" width="100%" height="100%"></canvas>
 
+<div id="bgrnd"></div>
 <div id="list"><h2>List</h2></div>
 <div id="list_block" open="false"
-     style=" z-index: 20; position: absolute; margin-top: 2%; margin-left: 74%; width: 25%; background: #0B0B0A">
+     style=" z-index: 20; position: absolute; margin-top: 2%; margin-left: 74%; width: 25%; background: rgba(11, 11, 10, 0)">
 </div>
 
 <div class="outer" style="display: none">
@@ -88,7 +88,7 @@
 </script>
 
 <script>
-    $("canvas.snow").let_it_snow({
+  /*  $("canvas.snow").let_it_snow({
         speed: 0,
         interaction: true,
         size: 2,
@@ -97,5 +97,5 @@
         color: "#ffffff",
         windPower: 0,
         image: false
-    });
+    }); */
 </script>
