--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </div>
 </div>
 
-<div id="line-panel" style="display: block;">
+<div id="line-panel" style="display: none;">
     <div style="float: left;" id="audios" class="audios">
         <audio src="http://dl.zaycev.net/86004/421474/rise_against_-_hero_of_war_(zaycev.net).mp3"
                preload="auto"></audio>
